--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Mozilla 🔥🦊</title>
   </head>
   <body>
+      <h1>NOT A FOX IS IT?</h1>
     <img src="images/notafox.jpeg" alt="My test image">
   </body>
 </html> 
