--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   </head>
   <body>
       <h1>NOT A FOX IS IT?</h1>
+      <h2>nah dont think so</h2>
     <img src="images/notafox.jpeg" alt="My test image">
   </body>
 </html> 
